create github pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/mbr-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/mbr-2000x1333.jpg);">
 
     
 
@@ -70,7 +70,7 @@
 
                     <h1 class="mbr-section-title display-1">POS Module</h1>
                     <p class="mbr-section-lead lead">Das Shopify-Addon für die österreichische Registrierkassensicherheitsverordnung vom 1. April 2017</p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="https://shopify.com">Addon Installieren</a> </div>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="comingsoon.html">Addon Installieren</a> </div>
                 </div>
             </div>
         </div>
@@ -130,7 +130,7 @@
                         <h4 class="card-title">3. POS Module</h4>
                         <h5 class="card-subtitle">Installieren und Konfigurieren</h5>
                         <p class="card-text">Um Rechnungen in Österreich gemäß der RKSV vom 1. April mit Shopify POS ausdrucken zu können, muss das POS Module Plugin pro Standort installiert werden.<br><br>Nach der installation werden Sie aufgefordert die nötigen Daten einzugeben. Danach kümmern wir uns um die Bereitstellung der Kassa. Sie müssen nur mehr im Finanz.Online die Kassennummer eintragen.</p>
-                        <div class="card-btn"><a href="comingsoon" class="btn btn-primary">App im Shopify Appstore</a></div>
+                        <div class="card-btn"><a href="comingsoon.html" class="btn btn-primary">App im Shopify Appstore</a></div>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                   <h3 class="mbr-section-title display-2">Das ist Shopify POS</h3>
                   
 
-                  <div><a class="btn btn-primary" href="https://mobirise.com">Zu Shopify Wechseln</a></div>
+                  <div><a class="btn btn-primary" href="https://shopify.com">Zu Shopify Wechseln</a></div>
               </div>
 
 
