--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
