create github pages

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -99,7 +99,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Vielen Dank für das Ausfüllen.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="NEWSLETTER">
-                        <input type="hidden" value="eT9tCBl5tabpGl5erIAuWAJVal5f4iyGfYrWbybdkypH0IQl12tcC7NM9gRIJ+iKQqiYX3JxjDZqjRF59ajb/xbE1V4Z50rBciLxTeCA7I7doYJRu++YKf2yq4wKgO/z" data-form-email="true">
+                        <input type="hidden" value="DPg45AD5dRufe9wx8+JP0Ze8lATlkP1fZ6WK/A2GlJdhcMvZ9XKtS6uApD3Ii5dP3clnLi2QxW5wDmlcPcMecd/CPZzB9Pdl+swv9Tj5EPA8AF8QG7YAhXlgXqQNL55J" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="max@mustermann.com" id="form2-w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
