--- a/preise.html
+++ b/preise.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="comingsoon.html">BUY</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="comingsoon.html">BESTELLEN</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -217,7 +217,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="bNN9/n6I9p/fwj2e/ecK6ip36NwfY6U/SOMPKRYFPPHyquuyntq8EsFHwsFu2w3BnZ6aLcRZwKuFkZukpltRO4ik24m4Za+zaDAm5+iNDzR+A6vnMzayxyHsk9yBXVI+" data-form-email="true">
+                        <input type="hidden" value="30AO0bJiBRpXf+ZG0hT1qFHSIvM19YPjfmaWqNzIaIAlumADmthhEVsRPPbsq5gXXLfcRuctw/5oiAPVf+ogScBJ/6wRA4iiOKule9r4uNLSk3FXDB6+utT3z6tHv66K" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
