--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     
 
@@ -69,7 +69,7 @@
 
                     <h1 class="mbr-section-title display-1">POS Module</h1>
                     <p class="mbr-section-lead lead">Das Shopify-Addon für die österreichische Registrierkassensicherheitsverordnung vom 1. April 2017</p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="comingsoon.html">Addon Installieren</a> </div>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="comingsoon.html">Zum Addon</a> </div>
                 </div>
             </div>
         </div>
