--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     
 
@@ -68,7 +68,7 @@
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
                     <h1 class="mbr-section-title display-1">POS Module</h1>
-                    <p class="mbr-section-lead lead">Das Shopify-Addon für die österreichische Registrierkassensicherheitsverordnung vom 1. April 2017</p>
+                    <p class="mbr-section-lead lead">Das Shopify-Addon für die <br>österreichische Registrierkassensicherheitsverordnung <br>vom 1. April 2017</p>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-primary" href="comingsoon.html">Zum Addon</a> </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <h4 class="card-title">1. Shopify POS</h4>
                     <h5 class="card-subtitle">Shopify ist die Grundlage</h5>
                     <p class="card-text">Um das POS Module nutzen zu können brauchen Sie ein funktionierendes und aktiviertes Shopify POS App, welches am iPad läuft.</p>
-                    <div class="card-btn"><a href="https://shopify.com" class="btn btn-primary" target="_blank">Shopify Website</a></div>
+                    <div class="card-btn"><a href="https://shopify.com" class="btn btn-primary" target="_blank">ZU SHOPIFY</a></div>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                         <h4 class="card-title"><br>2. AirPrint</h4>
                         <h5 class="card-subtitle">Ein AirPrint fähier Drucker</h5>
                         <p class="card-text">Um Rechnungen ausdrucken zu können setzt POS Module auf den Shopify "OrderPrinter". Dieses App benötigt einen AirPrint fähigen Drucker. <br><br>Ein zusätzlicher Bon-Drucker wird <strong>nicht</strong> mehr benötigt, ist aber möglich.</p>
-                        <div class="card-btn"><a href="https://geizhals.at/?cat=prl&amp;xf=721_AirPrint" class="btn btn-primary" target="_blank">Liste der AirPrint Drucker</a></div>
+                        <div class="card-btn"><a href="https://geizhals.at/?cat=prl&amp;xf=721_AirPrint" class="btn btn-primary" target="_blank">AIRPRINT DRUCKER</a></div>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                         <h4 class="card-title">3. POS Module</h4>
                         <h5 class="card-subtitle">Installieren und Konfigurieren</h5>
                         <p class="card-text">Um Rechnungen in Österreich gemäß der RKSV vom 1. April mit Shopify POS ausdrucken zu können, muss das POS Module Plugin pro Standort installiert werden.<br><br>Nach der installation werden Sie aufgefordert die nötigen Daten einzugeben. Danach kümmern wir uns um die Bereitstellung der Kassa. Sie müssen nur mehr im Finanz.Online die Kassennummer eintragen.</p>
-                        <div class="card-btn"><a href="comingsoon.html" class="btn btn-primary">App im Shopify Appstore</a></div>
+                        <div class="card-btn"><a href="comingsoon.html" class="btn btn-primary">ZUM ADDON</a></div>
                     </div>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                   <h3 class="mbr-section-title display-2">Das ist Shopify POS</h3>
                   
 
-                  <div><a class="btn btn-primary" href="https://shopify.com">Zu Shopify Wechseln</a></div>
+                  <div><a class="btn btn-primary" href="https://shopify.com">MEHR INFORMATIONEN</a></div>
               </div>
 
 
