create github pages

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -99,7 +99,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Vielen Dank für das Ausfüllen.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="NEWSLETTER">
-                        <input type="hidden" value="OFLbhINAQ4k/TQX+TBBLTq+b85PhxSwvdsVp4eTk3nhIG2lREP0skYZK/8YMTOPkr9Wok26pcGxjwh3NzJuIX858hl9W02iugW30ywA2TSDhJ85gPgLXYA84qXKC6dGI" data-form-email="true">
+                        <input type="hidden" value="wVhW1xHui4lBrUlS4hurN0gOH+cRLqXp4WkmhUpnuyERlmPr6f76ddDnbDm2mSRv462P9HrG335GzfE2hgPl7Q+p/J1Kul+g5fAmKuAHEXJKMSfmsfglLnTi1eHflvg9" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="max@mustermann.com" id="form2-w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
