--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -80,6 +80,72 @@
         </div>
     </div>
 
+</section>
+
+<section class="mbr-section" id="form1-1c" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+    
+    <div class="mbr-section mbr-section__container mbr-section__container--middle">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-xs-center">
+                    <h3 class="mbr-section-title display-2">Noch Fragen?</h3>
+                    <small class="mbr-section-subtitle">Kontaktieren Sie uns gleich!</small>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mbr-section mbr-section-nopadding">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
+
+
+                    <div data-form-alert="true">
+                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Danke, wir melden uns in Kürze!</div>
+                    </div>
+
+
+                    <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
+
+                        <input type="hidden" value="kH/wp9IQkGkUupRz0fDiKlhwfP2WrhnpaDgfdLum+2o6ui2m71ZCOuTLXyOgBI/xm+xP4LW2ULLVvpkrF6ABVOZdW5SgqsQLHQy2cerhbS0SHF4JWrlwyYgukmP8ne+j" data-form-email="true">
+
+                        <div class="row row-sm-offset">
+
+                            <div class="col-xs-12 col-md-4">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="form1-1c-name">Name<span class="form-asterisk">*</span></label>
+                                    <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-1c-name">
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-md-4">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="form1-1c-email">Email<span class="form-asterisk">*</span></label>
+                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-1c-email">
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-md-4">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="form1-1c-phone">Telefon</label>
+                                    <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-1c-phone">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="form-group">
+                            <label class="form-control-label" for="form1-1c-message">Nachricht</label>
+                            <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-1c-message"></textarea>
+                        </div>
+
+                        <div><button type="submit" class="btn btn-primary">Kontaktformular absenden</button></div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <section class="mbr-section mbr-section-md-padding mbr-footer footer2" id="contacts2-p" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
@@ -107,6 +173,7 @@ Email: office@posmodule.com<br>Telefon: +43 660 799 48 97<br></p>
   <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon"></i></a></div>
