--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     
 
@@ -223,7 +223,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="IQA8e5SC+m1rsHvcJlajXs55cOKgpQCPDDx/XSyeQCrNCbafO+EIvn3ehonD5DUDplbbp/n6/Mi0DsMkvpkni+OS5ziFKjMpMgZXblGOP2Z/uSDved+6P1rdMzuEHDlB" data-form-email="true">
+                        <input type="hidden" value="DsPdex8vf9Ya7WC/v5klK6jQ+NRszO7T3EGoaeD0BrCaIrWNRk77vgRBHX/yAduWcHHhm9w6D5horm7KkkZhZuYwDY1ot6DPJTJditSzN3Bwr5q/6oWsi+zTNtpYzM7/" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
