create github pages

--- a/team.html
+++ b/team.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-z" style="background-image: url(assets/images/olga-guryanova-2000x1156.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -105,7 +105,7 @@
                 </div><div class="col-xs-12 col-md-6">
 
                     <div class="mbr-testimonial card mbr-testimonial-lg">
-                        <div class="card-block"><p>Martin studiert derzeit am MIT in Bosten und hat Telematik in Graz studiert. Mit perfekten Englischkenntnissen und langjähriger Erfahrung im Management ist er die optimale Schnittstelle zwischen POS Module, Shopify und Kunden.</p></div>
+                        <div class="card-block"><p>Martin studiert derzeit am MIT in Boston und hat Telematik in Graz studiert. Mit perfekten Englischkenntnissen und langjähriger Erfahrung im Management ist er die optimale Schnittstelle zwischen POS Module, Shopify und Kunden.</p></div>
                         <div class="mbr-author card-footer">
                             <div class="mbr-author-img"><img src="assets/images/11836-1183565-th1-600x600.jpg" class="img-circle"></div>
                             <div class="mbr-author-name">Martin Moschitz, DI</div>
