create github pages

--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="0xJM11cA5jVp8rW9DWNY2f6tN+b3hdWJYSl11y3QJMm2BdDqMKWv4jL4OAUOFddbFXyAbNa/HKlbD5lhR/T/+h/jQe/6l+SXhKpVc3limJypcmsXSHT94JLYq4Noq5c8" data-form-email="true">
+                        <input type="hidden" value="RG8Zs1/2qsibSznPGzLPn3UOJwaUw+dsjg3ISHtAwf90G1fs950+C6UPmxxDuiFuxGqfhplOyEaqUfXDIBgi6qXzAmQ1c1RkeVfZMqxK3OmJVCiUtAM6josrcjK45Imt" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
