--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="comingsoon.html">BESTELLEN</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="team.html">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="comingsoon.html">BESTELLEN</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     
 
@@ -223,7 +223,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="aVABMIYpMTYyGYYdZ8UBYqt9aHLbl4qls/WY9irq03rMM5gsCXSR5H1O3NM/d9557RAk/ydFEkXH/5VTa8p3H3iKU8P8+XZ9v+XxLubcuSHfg0vzy33e49e4vGZEMFHL" data-form-email="true">
+                        <input type="hidden" value="GGRIs0+fLH9qcRLQ1TmPxV3i8Asn8KPzzis3sy2zz+9votiu+BKMLdAdHQxQF/R3YqOduJ2Sz82GQmu36inABfs8WN8Bmiq2ZVSVZlpGOfj9pkJzU8bRgc/cuaz0wAId" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
