--- a/preise.html
+++ b/preise.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="comingsoon.html">BESTELLEN</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="index.html#features3-f">SO GEHT'S</a></li><li class="nav-item"><a class="nav-link link" href="preise.html">&nbsp;PREISE</a></li><li class="nav-item"><a class="nav-link link" href="faq.html">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="team.html">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-primary" href="comingsoon.html">BESTELLEN</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -217,7 +217,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="XnIz0tAy3KamtYxEiwyI7rbQyyGSE8EeGyCWV+O91txFf+BD8FC30cDjdraPyuDuQmqARuVJJS2DAhQgGU0p4uVPYnyvDJpBRD+6ZOizTUlgNzmkJtF1E83J77wOMTd6" data-form-email="true">
+                        <input type="hidden" value="Ld1jo0dzPAGXpKjkW5H96SGoclG3Of7ANjrPc8GjgQSh0QcEEZ571Ckf5zLsb65CUYCCGbYrTisDm7U9aELWjg1s8F3XIG2uW2W+sYS+LwM3rsS79hdUsSh/UKfT23TN" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
