create github pages

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -76,7 +76,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Wir arbeiten derzeit mit Volldampf an den letzten Details. Natürlich können wir keine Software veröffentlichen die nicht getestet wurde und funktioniert. </p><p><br></p><p>Voraussichtlicher Termin zur Fertigstellung: Woche 27.März bis 1.April..</p></div>
+            <div class="col-xs-12 lead"><p>Hunderte Test-Bons, zig Testfälle, von Stornos bis Gutscheincodes, Rabatt auf den gesamten Warenkorb und Teilzahlungen. Wir haben's getestet und sind bereits mit unseren Beta-Kunden gestartet.&nbsp;</p><p><br></p><p>Offizieller geplanter Start. Freitag 7. April 2017.</p><p><br></p><p>Like on Facebook für schnellere Updates: https://www.facebook.com/Posmodule-298038257280778/</p></div>
         </div>
     </div>
 
@@ -99,7 +99,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Vielen Dank für das Ausfüllen.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="NEWSLETTER">
-                        <input type="hidden" value="aTLJDgM79WGlngWnaYflWEogCGdEN3Kyr8V+5a9yBYzRgHuHObZFxqXfpGlusFYOXWU5v2Dlkf3xS1R8ahGpyw/6eJ3FgfC3j/LbQB9AFsFN6RqP/7shAg8ywb884UOq" data-form-email="true">
+                        <input type="hidden" value="EJs3ILlb/Zc5x3RpjkdbepJGxjKju9OXMK6JuZgw3EpBor07Mm7iVOobz3GCJmc+iTqh1uY4xCttt5/WNSjvXN6iiWwYh58BN6ov2qLky5/95TDx66PJN2Vd55CFT9i2" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="max@mustermann.com" id="form2-w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
