create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     
 
@@ -117,7 +117,7 @@
                     <div class="card-block">
                         <h4 class="card-title">POSModule RKSV Addon</h4>
                         <h5 class="card-subtitle">Einfach dazu installieren</h5>
-                        <p class="card-text">Mit Shopify können Sie Ihren Shop mit Addons und Apps erweitern. Unser App, das "POS Module RKSV Addon" erweitert den Shop so, dass nach RKSV signierte Bons und A4 Rechnungen gedruckt werden können.</p>
+                        <p class="card-text">Mit Shopify können Sie Ihren Shop mit Addons und Apps erweitern. Unser App, das "POS Module RKSV Addon" erweitert den Shop so, dass nach RKSV signierte Bons und A4 Rechnungen gedruckt werden können. Auch Email-Rechnungen werden unterstützt.</p>
                         
                     </div>
                 </div>
@@ -225,7 +225,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="cTDmfOn13cwy2+qm23ClsOJXyQ8/t/YBJThReZ568agViIu6zwdNZEbt7+zLC49d6a9CJZ/eTdZ7YKaUxjgbDNzqjiYHGHwFfMzIZvCrL8dXzYB2Yr9k8ENaH6ldYiza" data-form-email="true">
+                        <input type="hidden" value="jJ9HWiFXb1SvN4kqSA1mM+4YW4Kq5TYeORCKSRYxfBSKN95Bfb4Ri4XD4OJr7RX6OPA8MBN9gF9TMHVGLqKpyMc9snmHm22BmD+mQzi+4jHb0qnryelL0CQFyznfJg13" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
