--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-q" style="background-image: url(assets/images/mbr-2000x1325.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -107,7 +107,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="o0nZ2QEVxpWPmqKQH0taZYwce4GkAt3UVxGd55TsV/47/7HHv4s1HjGpDlkIrtSMvXpkYDNKEyq0CCD0A8SBgGfHLgCEbqlb3qxfU43tFh4PF7mcNDxnWS3mJQU2TK8R" data-form-email="true">
+                        <input type="hidden" value="dFgA8mngidYXWJ/YFaqzmbKQ6Hx8SWtrt7Si8UNwmTQq812s+8bIXdVv4FRPg0bNrUYnDEWn1pT43WqKtJmCvsKNXCttXRhE6gLFj4ZErAIIFyBTG9BULfAiZZZ8+Fr6" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
