create github pages

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-u" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -99,7 +99,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Vielen Dank für das Ausfüllen.</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="NEWSLETTER">
-                        <input type="hidden" value="qD/+s7VYW0AFVG7PlsiDSPf8Hr0D+QcyybJMLPcVza6Lt4y2T2HSKFeytSHxIDp7vU8TOj5vRtmWxEDSRx9C+lpWy4poQE3TgGXVRR5cPWWhGi4/T3b/06ZajZUkeg9Y" data-form-email="true">
+                        <input type="hidden" value="k4KKsqjAKxPtdDGLCf1PtWNP9G2AXSOUue9+rxAiH3eF02fIlv7OjIhR78fLDOX0rNjkamRrwPPKhXpCzF2yMaRNu7P5Hqnnm/ao1UlfSOQo/CIdh92ed9brZTXPor8+" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="max@mustermann.com" id="form2-w-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
