--- a/preise.html
+++ b/preise.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-n" style="background-image: url(assets/images/desert.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -97,18 +97,18 @@
                       
                       <div class="card-title">
                         <h3 class="mbr-plan-title">Einrichtung</h3>
-                        <small class="mbr-plan-subtitle">Einmalige Installation und Einrichtung. Dies bedeuetet: Beantragung der Zugangsdaten von A-Trust und Bereitstellung der Zertifikate für Finanz.Online.</small>
+                        <small class="mbr-plan-subtitle">Beantragung der Zugangsdaten von A-Trust und Bereitstellung der Zertifikate für Finanz.Online.</small>
                       </div>
                       <div class="card-text">
                           <div class="mbr-price">
-                            <span class="mbr-price-value">€</span>
+                            <span class="mbr-price-value">$</span>
                             <span class="mbr-price-figure">49</span><small class="mbr-price-term"></small>
                           </div>
-                          <small class="mbr-plan-price-desc">Einmalige Gebühr wird direkt über Shopify abgerechnet</small>
+                          <small class="mbr-plan-price-desc">Einmalige Gebühr pro Kassa und Standort.<br></small>
                       </div>
                     </div>
                     <div class="mbr-plan-body card-block">
-                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Zertifikatbeantragung A-Trust</span></li><li class="list-group-item">Bereitstellung der Daten für Finanz.Online</li></ul></div>
+                      <div class="mbr-plan-list"><ul class="list-group list-group-flush"><li class="list-group-item"><span style="font-size: 0.875rem; line-height: 3.125rem;">Zertifikatbeantragung A-Trust</span></li><li class="list-group-item">Bereitstellung der Daten für FinanzOnline</li><li class="list-group-item">Ein getrennter Rechnungskreis pro Standort wird benötigt.</li></ul></div>
                       
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                       </div>
                       <div class="card-text">
                           <div class="mbr-price">
-                            <span class="mbr-price-value">€</span>
+                            <span class="mbr-price-value">$</span>
                             <span class="mbr-price-figure">15</span><small class="mbr-price-term">/Mo.</small>
                           </div>
                           <small class="mbr-plan-price-desc">pro Standort</small>
@@ -217,7 +217,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="JL6VNAB7+Hr+lyqviRgMA58HV0DHmD9SU4OfAvrb94yoZJwuSELK4BJd0sgfMcv2LdaJFqb13n1gUO9fmXWmhGY0Wb10cMxri0ybjGieDwDHN8KfZesAG9b9tMwc54BB" data-form-email="true">
+                        <input type="hidden" value="N6GA4zOFtSNmkHa/PY8Pmh/KpyiJU6ndZC79TCKw7dOTYUIQvtDBzQETpbWTziwrmcHplplql1pHe30/MeKWxQO4OqJddH5/KcNEz8Wr6dC4a2/tt2tcabwAY17HOuua" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
