--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-1" style="background-image: url(assets/images/carli-jeen-2000x1333.jpg);">
 
     
 
@@ -225,7 +225,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Noch Fragen?">
 
-                        <input type="hidden" value="jJ9HWiFXb1SvN4kqSA1mM+4YW4Kq5TYeORCKSRYxfBSKN95Bfb4Ri4XD4OJr7RX6OPA8MBN9gF9TMHVGLqKpyMc9snmHm22BmD+mQzi+4jHb0qnryelL0CQFyznfJg13" data-form-email="true">
+                        <input type="hidden" value="0qMS/mQ6I4xvIFdgmizsnTOp1H4uNk6/eJCwGdooz8yReyH3ojYT8OCsfbKvCq17MV0hJfoIobBa97bFajWtxpD23eTNtkBxHhkNiCy/PN6VIPG7FA1Afu2F+JiFCY1v" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
